# demo-project

./: .bumpversion.cfg  .pre-commit-config.yaml  .tox  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
demo_project/: __init__.py  calculations.py  main.py
docs/: api.md  installation.md  usage.md
en/: index.html
en/api/: index.html
en/changelog/: index.html
en/contributing/: index.html
en/installation/: index.html
en/usage/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_demo_project.py
usage/: index.html
zh/: index.html
zh/api/: index.html
zh/changelog/: index.html
zh/contributing/: index.html
zh/installation/: index.html
zh/usage/: index.html
