[tool.poetry]
name = "demo-project"
version = "0.1.0"
homepage = "https://github.com/anyidea/demo-project"
description = "Skeleton project created by Cookiecutter PyPackage."
authors = ["Aiden Lu <allaher@icloud.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "demo_project" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.*,<4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tox = "^3.20.1"
pre-commit = "^2.12.0"
virtualenv = "^20.2.2"
pip = "^20.3.1"
twine = "^3.3.0"
toml = "^0.10.2"
bump2version = "^1.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^21.5b2"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
mypy = "^0.900"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs  = "^1.1.2"
mkdocs-include-markdown-plugin = "^1.0.0"
mkdocs-material = "^6.1.7"
mkdocstrings = "^0.15.2"
mkdocs-material-extensions = "^1.0.1"
mkdocs-autorefs = "^0.2.1"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
